Fix 500s in alarm pages on Java 17 (Base64 + null safety)