@@ -19,6 +19,7 @@ import java.text.Format;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
+import java.util.Base64;
 
 import jakarta.servlet.RequestDispatcher;
 import jakarta.servlet.ServletException;
@@ -40,7 +41,6 @@ import ucf.fdrssutil.globalUtil;
 import java.awt.image.BufferedImage;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
-import sun.misc.BASE64Decoder;
 
 
 /**
@@ -163,7 +163,11 @@ public class RealTimeAlarmSearch extends HttpServlet {
 		}
 		
 		
-		int verify_status=Integer.parseInt(request.getParameter("verify_state"));
+		int verify_status=0;
+		String verifyStateParam = request.getParameter("verify_state");
+		if (verifyStateParam != null && !verifyStateParam.isEmpty()) {
+			try { verify_status = Integer.parseInt(verifyStateParam); } catch (NumberFormatException ignored) {}
+		}
 		if (verify_status == 1)
 		{
 			if(sql!="") sql+=" AND verify_state='"+verify_status+"'";
@@ -193,8 +197,9 @@ public class RealTimeAlarmSearch extends HttpServlet {
     	con = MySQLConfig.getConnection();
     	
     	String member=(String) request.getParameter("member");
+    	if (member == null) member = "";
     	String adminid = "";
-		if (!member.equals("agent"))
+		if (!"agent".equals(member))
 		{
 			try {
 				String query = "select * from users_info where userid='"+userid+"'";
@@ -219,7 +224,7 @@ public class RealTimeAlarmSearch extends HttpServlet {
 		
 		String count_sql = "select * from alarm_info where ";
 		
-		if(adminid!=""){
+		if(adminid != null && !adminid.isEmpty()){
 			if(sql!="") sql+=" AND adminid='"+adminid.trim()+"'";
 			else sql="adminid='"+adminid.trim() + "'";
 			
@@ -328,8 +333,8 @@ public class RealTimeAlarmSearch extends HttpServlet {
 						        line = br.readLine();
 						    }
 						    String everything = sb.toString();
-						    BASE64Decoder decoder = new BASE64Decoder();
-							byte[] imageByte = decoder.decodeBuffer(everything);
+							String sanitized = everything.replaceAll("\\s+", "");
+							byte[] imageByte = Base64.getDecoder().decode(sanitized);
 							image_path=personimgdir+"/" + access_date + "_" + alarm_id + "_" + access_time + "_" + adminid + "_detected.jpg";
 							//if (!img_f.exists()){
 								DataOutputStream dos = globalUtil.getOutputStream(image_path);
@@ -366,8 +371,8 @@ public class RealTimeAlarmSearch extends HttpServlet {
 						        line = br.readLine();
 						    }
 						    String everything = sb.toString();
-						    BASE64Decoder decoder = new BASE64Decoder();
-							byte[] imageByte = decoder.decodeBuffer(everything);
+							String sanitized = everything.replaceAll("\\s+", "");
+							byte[] imageByte = Base64.getDecoder().decode(sanitized);
 							image_path=personimgdir+"/" + access_date + "_" + alarm_id + "_" + access_time + "_" + adminid + "_recognized.jpg";
 							//if (!img_f.exists()){
 								DataOutputStream dos = globalUtil.getOutputStream(image_path);
@@ -403,8 +408,8 @@ public class RealTimeAlarmSearch extends HttpServlet {
 						        line = br.readLine();
 						    }
 						    String everything = sb.toString();
-						    BASE64Decoder decoder = new BASE64Decoder();
-							byte[] imageByte = decoder.decodeBuffer(everything);
+							String sanitized = everything.replaceAll("\\s+", "");
+							byte[] imageByte = Base64.getDecoder().decode(sanitized);
 							image_path=personimgdir+"/" + access_date + "_" + alarm_id + "_" + access_time + "_" + adminid + "_full.jpg";
 							//if (!img_f.exists()){
 								DataOutputStream dos = globalUtil.getOutputStream(image_path);
